--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "systemjs-webpack-interop": "^2.3.7",
     "vue": "^2.6.14",
     "vue-cli-plugin-single-spa": "^3.3.0",
-    "vue-router": "^4.0.16",
-    "vuex": "^4.0.2"
+    "vue-router": "^4.0.16"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
