--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "scripts": {
     "serve": "vue-cli-service serve --port 9002",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "serve:standalone": "vue-cli-service serve --mode standalone"
   },
   "dependencies": {
     "core-js": "^3.8.3",
     "single-spa-vue": "^2.5.1",
-    "systemjs-webpack-interop": "^2.3.7",
     "vue": "^2.6.14",
-    "vue-cli-plugin-single-spa": "^3.3.0",
     "vue-router": "^4.0.16"
   },
   "devDependencies": {
@@ -23,6 +22,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "vue-cli-plugin-single-spa": "^3.3.0",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
